--- a/src/components/MyButton/MyButton.css
+++ b/src/components/MyButton/MyButton.css
@@ -1,5 +1,5 @@
   .my-button{
-      border: solid 2px #000;
+      border: none;
       color: white;
       padding: 10px;
       display: inline-block;
@@ -14,3 +14,6 @@
   .secondary{background-color: #e7e7e7;color:#000}
   .success{background-color: green;}
   .danger{background-color: #f44336;}
+
+  .disable{background-color:#ccc;
+  color:#888;}
